theme refactored to category
